# django-template

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
