[tool.poetry]
name = "Django Dev Template by Thuwarakesh"
version = "0.1.0"
description = "This is a django project with graphene-django, postgres backend, and pre-commit hooks"
authors = ["thuwarakeshm <thuwarakesh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
graphene-django = "^2.15.0"
autoflake = "^1.4"
python-dotenv = "^0.19.0"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.8b0"
isort = "^5.9.3"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
